<resources>
    <!-- General -->
    <string name="app_name">MifirstApp</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- IMC App -->
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="resultIMC">Tu resultado</string>
    <string name="recalculate">re-calcular</string>
    <string name="imc_app">IMC App</string>
    <string name="title_low_weight">Bajo Peso</string>
    <string name="desc_low_weight">Estas por debajo de lo optimo para tu peso y altura</string>
    <string name="title_normal_weight">Peso Normal</string>
    <string name="desc_normal_weight">Estas en lo optimo para tu peso y altura</string>
    <string name="title_over_weight">Sobrepeso</string>
    <string name="desc_over_weight">Estas por encima de lo optimo para tu peso y altura</string>
    <string name="title_obesity">Obesidad</string>
    <string name="desc_obesity">Estas muy por encima de lo optimo para tu peso y altura</string>

    <!-- TodoApp -->
    <string name="todo_app">Todo App</string>
    <string name="todoapp_welcome_user">Welcome User</string>
    <string name="todo_categories">Categorias</string>
    <string name="todo_task">tareas</string>
    <string name="todo_dialog_add_task">Añade una tarea</string>
    <string name="todo_create_task">Crear Tarea</string>
    <string name="todoapp_business">Negocios</string>
    <string name="todoapp_personal">Personal</string>
    <string name="todoapp_other">Otros</string>
    <color name="todo_background_card">#FF081A4A</color>
    <color name="todo_background_disabled">#787878</color>
    <color name="todo_background_todo_app">#FF2D4993</color>
    <color name="todo_subtitle_text">#959595</color>
    <color name="todo_accent">#E91E63</color>
    <color name="todo_business_category">#FF9800</color>
    <color name="todo_personal_category">#00BCD4</color>
    <color name="todo_other_category">#4CAF50</color>


    <!-- HelloApp -->
    <string name="helloApp">HelloApp</string>
    <!-- SuperHero App -->
    <string name="superhero_app">SuperHero App</string>
    <string name="search_hint">hero app search text</string>
</resources>
