<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MenuActivity">
    <Button
        android:id="@+id/btnHelloApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helloApp" />
    <Button
        android:id="@+id/btnIMCApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc_app" />

    <Button
        android:id="@+id/btnTodoApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_app" />
    <Button
        android:id="@+id/btnSuperHeroApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/superhero_app" />

</LinearLayout>